# druvis

./: Cargo.toml
druvis-core/: Cargo.toml
druvis-core/materials/: druvis.color.json
druvis-core/shaders/: druvis.albedo.json  druvis.albedo.wgsl  druvis.color.json  druvis.color.wgsl
druvis-core/src/: lib.rs  main.rs
druvis-core/src/binding/: bind_group_builder.rs  bind_group_layout_builder.rs  bind_index.rs  common_binding.rs  data_binding_state.rs  mod.rs
druvis-core/src/camera/: camera.rs  camera_uniform.rs  mod.rs  perspective_camera.rs
druvis-core/src/common/: mod.rs  transformation_uniform.rs  util_traits.rs
druvis-core/src/game_object/: component.rs  game_object.rs  mod.rs  transform.rs
druvis-core/src/instance/: instance.rs
druvis-core/src/lighting/: light.rs  light_uniform.rs  mod.rs
druvis-core/src/material/: material.rs  material_descriptor.rs  material_manager.rs  mod.rs
druvis-core/src/mesh/: mesh.rs
druvis-core/src/render_pipeline/: mod.rs  render_pipeline.rs  simple_render_pipeline.rs
druvis-core/src/rendering/: mod.rs  render_state.rs  rendering.rs  uniform.rs
druvis-core/src/scene/: scene.rs
druvis-core/src/shader/: mod.rs  shader.rs  shader_descriptor.rs  shader_manager.rs  shader_property.rs
druvis-core/src/texture/: mod.rs  texture.rs  texture_manager.rs
druvis-core/src/utils/: memory.rs
druvis-core/src/vertex/: vertex.rs
druvis-mmd-parser/: Cargo.toml
druvis-mmd-parser/src/: lib.rs  main.rs  utils.rs
druvis-mmd-parser/src/pmx/: mod.rs  pmx_parser.rs  (+1 more)
druvis-test/: Cargo.toml
druvis-test/src/: main.rs
(+5 files in other folders)
