[package]
name = "druvis-mmd-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
druvis-core = { path = "../druvis-core" }
wgpu = { version = "0.17", features = ["serde", "trace", "replay"] }